// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectPage IconTabBar Mode 1`] = `
<div
  class="ObjectPage-objectPage-0"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPageScrollBar-outerScrollbar-0"
    style="width: 12px;"
  >
    <div
      class="ObjectPageScrollBar-innerScrollbar-0"
      style="margin-left: -12px; width: 24px;"
    >
      <div
        style="width: 12px;"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    >
      <ui5-button
        design="Default"
      >
        Action
      </ui5-button>
    </span>
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <span
          class="ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <div
              class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
            >
              <h1
                class="ObjectPage-title-0"
              >
                Fiori Object Page Title
              </h1>
              <span
                class="ObjectPage-subTitle-0"
              >
                Sub Title
              </span>
              <div
                class="ObjectPage-keyInfos-0"
              />
            </div>
          </div>
        </span>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-outerContentContainer-0"
  >
    <div
      class="ObjectPage-contentContainer-0"
      id="ObjectPageContent"
      style="margin-right: -12px;"
    >
      <div
        class="ObjectPage-contentScrollContainer-0"
      >
        <div />
        <div>
          <div
            class="ObjectPage-contentHeader-0"
            style="position: relative;"
          >
            <div
              class="ObjectPage-headerContent-0"
            >
              <span
                class="ObjectPage-headerCustomContent-0"
              >
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <ui5-link
                    design="Default"
                    href="https://www.sap.com"
                  >
                    www.myurl.com
                  </ui5-link>
                  <span
                    class="Text-text-0"
                  >
                    Address 1
                  </span>
                  <span
                    class="Text-text-0"
                  >
                    Address 2
                  </span>
                  <span
                    class="Text-text-0"
                  >
                    Address 3
                  </span>
                </div>
              </span>
            </div>
          </div>
          <section
            class="ObjectPage-anchorBar-0"
            role="navigation"
          >
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <span
                class="ObjectPageAnchorButton-button-0 ObjectPageAnchorButton-selected-0"
              >
                Test 1
              </span>
            </li>
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <span
                class="ObjectPageAnchorButton-button-0"
              >
                Test 2
              </span>
            </li>
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <span
                class="ObjectPageAnchorButton-button-0"
              >
                Test 3
              </span>
            </li>
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <span
                class="ObjectPageAnchorButton-button-0"
              >
                Test 4
              </span>
              <div
                style="display: inline-block;"
              >
                <ui5-icon
                  name="slim-arrow-down"
                  style="height: 1rem; width: 1rem; cursor: pointer; margin: 0px 0.25rem 0px 0.375rem; font-size: 0.875rem;"
                />
              </div>
              <ui5-popover
                horizontal-align="Center"
                no-arrow="true"
                placement-type="Bottom"
                vertical-align="Center"
              >
                <ui5-list
                  footer-text=""
                  header-text=""
                  mode="None"
                  no-data-text=""
                  separators="All"
                >
                  <ui5-li
                    data-key="4.1"
                    info-state="None"
                    type="Active"
                  >
                    SubSection 4.1
                  </ui5-li>
                  <ui5-li
                    data-key="4.2"
                    info-state="None"
                    type="Active"
                  >
                    SubSection 4.2
                  </ui5-li>
                </ui5-list>
              </ui5-popover>
            </li>
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <span
                class="ObjectPageAnchorButton-button-0"
              >
                Test 5
              </span>
              <div
                style="display: inline-block;"
              >
                <ui5-icon
                  name="slim-arrow-down"
                  style="height: 1rem; width: 1rem; cursor: pointer; margin: 0px 0.25rem 0px 0.375rem; font-size: 0.875rem;"
                />
              </div>
              <ui5-popover
                horizontal-align="Center"
                no-arrow="true"
                placement-type="Bottom"
                vertical-align="Center"
              >
                <ui5-list
                  footer-text=""
                  header-text=""
                  mode="None"
                  no-data-text=""
                  separators="All"
                >
                  <ui5-li
                    data-key="5.1"
                    info-state="None"
                    type="Active"
                  >
                    SubSection 5.1
                  </ui5-li>
                  <ui5-li
                    data-key="5.2"
                    info-state="None"
                    type="Active"
                  >
                    SubSection 5.2
                  </ui5-li>
                </ui5-list>
              </ui5-popover>
            </li>
            <ui5-button
              class="ObjectPage-toggleHeaderButton-0"
              design="Default"
              icon="navigation-up-arrow"
            />
          </section>
        </div>
        <section
          class="ObjectPage-sectionsContainer-0"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              >
                Test 1
              </div>
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                <ui5-label
                  for=""
                >
                  My Content 1
                </ui5-label>
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage-fillerDiv-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Just Some Sections 1`] = `
<div
  class="ObjectPage-objectPage-0"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPageScrollBar-outerScrollbar-0"
    style="width: 12px;"
  >
    <div
      class="ObjectPageScrollBar-innerScrollbar-0"
      style="margin-left: -12px; width: 24px;"
    >
      <div
        style="width: 12px;"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <span
          class="ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <div
              class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
            >
              <h1
                class="ObjectPage-title-0"
              />
              <span
                class="ObjectPage-subTitle-0"
              />
              <div
                class="ObjectPage-keyInfos-0"
              />
            </div>
          </div>
        </span>
      </div>
    </header>
    <section
      class="ObjectPage-anchorBar-0"
      role="navigation"
    >
      <li
        class="ObjectPageAnchorButton-anchorButtonContainer-0"
      >
        <span
          class="ObjectPageAnchorButton-button-0 ObjectPageAnchorButton-selected-0"
        />
      </li>
      <li
        class="ObjectPageAnchorButton-anchorButtonContainer-0"
      >
        <span
          class="ObjectPageAnchorButton-button-0"
        />
      </li>
    </section>
  </header>
  <div
    class="ObjectPage-outerContentContainer-0"
  >
    <div
      class="ObjectPage-contentContainer-0"
      id="ObjectPageContent"
      style="margin-right: -12px;"
    >
      <div
        class="ObjectPage-contentScrollContainer-0"
      >
        <div />
        <div />
        <section
          class="ObjectPage-sectionsContainer-0"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              />
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                Test
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage-fillerDiv-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Key Infos 1`] = `
<div
  class="ObjectPage-objectPage-0"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPageScrollBar-outerScrollbar-0"
    style="width: 12px;"
  >
    <div
      class="ObjectPageScrollBar-innerScrollbar-0"
      style="margin-left: -12px; width: 24px;"
    >
      <div
        style="width: 12px;"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <span
          class="ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <div>
              <ui5-link
                design="Default"
                href="PathSegment1"
              >
                Path1
              </ui5-link>
              <ui5-label
                for=""
                style="margin: 0px 0.25rem;"
              >
                /
              </ui5-label>
              <ui5-link
                design="Default"
                href="PathSegment2"
              >
                Path2
              </ui5-link>
              <ui5-label
                for=""
                style="margin: 0px 0.25rem;"
              >
                /
              </ui5-label>
              <ui5-link
                design="Default"
                href="PathSegment3"
              />
            </div>
            <div
              class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
            >
              <h1
                class="ObjectPage-title-0"
              />
              <span
                class="ObjectPage-subTitle-0"
              />
              <div
                class="ObjectPage-keyInfos-0"
              >
                <div>
                  <ui5-title
                    level="H5"
                  >
                    Key Info 1
                  </ui5-title>
                  <span
                    class="Text-text-0"
                  >
                    Value 1
                  </span>
                </div>
                <div>
                  <ui5-title
                    level="H5"
                  >
                    Key Info 2
                  </ui5-title>
                  <span
                    class="Text-text-0"
                  >
                    Value 2
                  </span>
                </div>
                <div>
                  <ui5-title
                    level="H5"
                  >
                    Key Info 3
                  </ui5-title>
                  <span
                    class="Text-text-0"
                  >
                    Value 3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </header>
    <section
      class="ObjectPage-anchorBar-0"
      role="navigation"
    >
      <li
        class="ObjectPageAnchorButton-anchorButtonContainer-0"
      >
        <div
          class=""
          style="cursor: pointer;"
        >
          <span
            class="ObjectPageAnchorButton-button-0"
          />
        </div>
      </li>
      <li
        class="ObjectPageAnchorButton-anchorButtonContainer-0"
      >
        <div
          class="ObjectPageAnchorButton-selected-0"
          style="cursor: pointer;"
        >
          <span
            class="ObjectPageAnchorButton-button-0"
          />
        </div>
      </li>
    </section>
  </header>
  <div
    class="ObjectPage-outerContentContainer-0"
  >
    <div
      class="ObjectPage-contentContainer-0"
      id="ObjectPageContent"
      style="margin-right: -12px;"
    >
      <div
        class="ObjectPage-contentScrollContainer-0"
      >
        <div />
        <div />
        <section
          class="ObjectPage-sectionsContainer-0"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              />
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                Test
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-2"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              />
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                Test 2
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage-fillerDiv-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage No Header 1`] = `
<div
  class="ObjectPage-objectPage-0"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPageScrollBar-outerScrollbar-0"
    style="width: 12px;"
  >
    <div
      class="ObjectPageScrollBar-innerScrollbar-0"
      style="margin-left: -12px; width: 24px;"
    >
      <div
        style="width: 12px;"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <section
      class="ObjectPage-anchorBar-0"
      role="navigation"
    >
      <li
        class="ObjectPageAnchorButton-anchorButtonContainer-0"
      >
        <div
          class=""
          style="cursor: pointer;"
        >
          <span
            class="ObjectPageAnchorButton-button-0"
          />
        </div>
      </li>
      <li
        class="ObjectPageAnchorButton-anchorButtonContainer-0"
      >
        <div
          class="ObjectPageAnchorButton-selected-0"
          style="cursor: pointer;"
        >
          <span
            class="ObjectPageAnchorButton-button-0"
          />
        </div>
      </li>
    </section>
  </header>
  <div
    class="ObjectPage-outerContentContainer-0"
  >
    <div
      class="ObjectPage-contentContainer-0"
      id="ObjectPageContent"
      style="margin-right: -12px;"
    >
      <div
        class="ObjectPage-contentScrollContainer-0"
      >
        <div />
        <div />
        <section
          class="ObjectPage-sectionsContainer-0"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              />
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                Test
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-2"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              />
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                Test 2
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage-fillerDiv-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Not crashing with 0 sections 1`] = `
<div
  class="ObjectPage-objectPage-0"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPageScrollBar-outerScrollbar-0"
    style="width: 12px;"
  >
    <div
      class="ObjectPageScrollBar-innerScrollbar-0"
      style="margin-left: -12px; width: 24px;"
    >
      <div
        style="width: 12px;"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <span
          class="ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <div
              class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
            >
              <h1
                class="ObjectPage-title-0"
              />
              <span
                class="ObjectPage-subTitle-0"
              />
              <div
                class="ObjectPage-keyInfos-0"
              />
            </div>
          </div>
        </span>
      </div>
    </header>
    <section
      class="ObjectPage-anchorBar-0"
      role="navigation"
    />
  </header>
  <div
    class="ObjectPage-outerContentContainer-0"
  >
    <div
      class="ObjectPage-contentContainer-0"
      id="ObjectPageContent"
      style="margin-right: -12px;"
    >
      <div
        class="ObjectPage-contentScrollContainer-0"
      >
        <div />
        <div />
        <section
          class="ObjectPage-sectionsContainer-0"
        />
        <div
          class="ObjectPage-fillerDiv-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Not crashing with 1 section - Default Mode 1`] = `
<div
  class="ObjectPage-objectPage-0"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPageScrollBar-outerScrollbar-0"
    style="width: 12px;"
  >
    <div
      class="ObjectPageScrollBar-innerScrollbar-0"
      style="margin-left: -12px; width: 24px;"
    >
      <div
        style="width: 12px;"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <span
          class="ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <div
              class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
            >
              <h1
                class="ObjectPage-title-0"
              />
              <span
                class="ObjectPage-subTitle-0"
              />
              <div
                class="ObjectPage-keyInfos-0"
              />
            </div>
          </div>
        </span>
      </div>
    </header>
    <section
      class="ObjectPage-anchorBar-0"
      role="navigation"
    >
      <li
        class="ObjectPageAnchorButton-anchorButtonContainer-0"
      >
        <div
          class="ObjectPageAnchorButton-selected-0"
          style="cursor: pointer;"
        >
          <span
            class="ObjectPageAnchorButton-button-0"
          />
        </div>
      </li>
    </section>
  </header>
  <div
    class="ObjectPage-outerContentContainer-0"
  >
    <div
      class="ObjectPage-contentContainer-0"
      id="ObjectPageContent"
      style="margin-right: -12px;"
    >
      <div
        class="ObjectPage-contentScrollContainer-0"
      >
        <div />
        <div />
        <section
          class="ObjectPage-sectionsContainer-0"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              />
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                Test
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage-fillerDiv-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Not crashing with 1 section - IconTabBar Mode 1`] = `
<div
  class="ObjectPage-objectPage-0"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPageScrollBar-outerScrollbar-0"
    style="width: 12px;"
  >
    <div
      class="ObjectPageScrollBar-innerScrollbar-0"
      style="margin-left: -12px; width: 24px;"
    >
      <div
        style="width: 12px;"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <span
          class="ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <div
              class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
            >
              <h1
                class="ObjectPage-title-0"
              />
              <span
                class="ObjectPage-subTitle-0"
              />
              <div
                class="ObjectPage-keyInfos-0"
              />
            </div>
          </div>
        </span>
      </div>
    </header>
    <section
      class="ObjectPage-anchorBar-0"
      role="navigation"
    >
      <li
        class="ObjectPageAnchorButton-anchorButtonContainer-0"
      >
        <span
          class="ObjectPageAnchorButton-button-0 ObjectPageAnchorButton-selected-0"
        />
      </li>
    </section>
  </header>
  <div
    class="ObjectPage-outerContentContainer-0"
  >
    <div
      class="ObjectPage-contentContainer-0"
      id="ObjectPageContent"
      style="margin-right: -12px;"
    >
      <div
        class="ObjectPage-contentScrollContainer-0"
      >
        <div />
        <div />
        <section
          class="ObjectPage-sectionsContainer-0"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              />
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                Test
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage-fillerDiv-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Only Sections 1`] = `
<div
  class="ObjectPage-objectPage-0"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPageScrollBar-outerScrollbar-0"
    style="width: 12px;"
  >
    <div
      class="ObjectPageScrollBar-innerScrollbar-0"
      style="margin-left: -12px; width: 24px;"
    >
      <div
        style="width: 12px;"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    >
      <ui5-button
        design="Default"
      >
        Action
      </ui5-button>
    </span>
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <span
          class="ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <div
              class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
            >
              <h1
                class="ObjectPage-title-0"
              >
                Fiori Object Page Title
              </h1>
              <span
                class="ObjectPage-subTitle-0"
              >
                Sub Title
              </span>
              <div
                class="ObjectPage-keyInfos-0"
              />
            </div>
          </div>
        </span>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-outerContentContainer-0"
  >
    <div
      class="ObjectPage-contentContainer-0"
      id="ObjectPageContent"
      style="margin-right: -12px;"
    >
      <div
        class="ObjectPage-contentScrollContainer-0"
      >
        <div />
        <div>
          <div
            class="ObjectPage-contentHeader-0"
            style="position: relative;"
          >
            <div
              class="ObjectPage-headerContent-0"
            >
              <span
                class="ObjectPage-headerCustomContent-0"
              >
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <ui5-link
                    design="Default"
                    href="https://www.sap.com"
                  >
                    www.myurl.com
                  </ui5-link>
                  <span
                    class="Text-text-0"
                  >
                    Address 1
                  </span>
                  <span
                    class="Text-text-0"
                  >
                    Address 2
                  </span>
                  <span
                    class="Text-text-0"
                  >
                    Address 3
                  </span>
                </div>
              </span>
            </div>
          </div>
          <section
            class="ObjectPage-anchorBar-0"
            role="navigation"
          >
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton-button-0"
                >
                  Test 1
                </span>
              </div>
            </li>
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton-button-0"
                >
                  Test 2
                </span>
              </div>
            </li>
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <div
                class="ObjectPageAnchorButton-selected-0"
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton-button-0"
                >
                  Test 3
                </span>
              </div>
            </li>
          </section>
        </div>
        <section
          class="ObjectPage-sectionsContainer-0"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              >
                Test 1
              </div>
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                <ui5-label
                  for=""
                >
                  My Content 1
                </ui5-label>
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-2"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              >
                Test 2
              </div>
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                <ui5-label
                  for=""
                >
                  My Content 2
                </ui5-label>
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-3"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              >
                Test 3
              </div>
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                <ui5-label
                  for=""
                >
                  My Content 3
                </ui5-label>
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage-fillerDiv-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage Set selected section id 1`] = `
<div
  class="ObjectPage-objectPage-0"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPageScrollBar-outerScrollbar-0"
    style="width: 12px;"
  >
    <div
      class="ObjectPageScrollBar-innerScrollbar-0"
      style="margin-left: -12px; width: 24px;"
    >
      <div
        style="width: 12px;"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    />
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <span
          class="ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <div
              class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
            >
              <h1
                class="ObjectPage-title-0"
              />
              <span
                class="ObjectPage-subTitle-0"
              />
              <div
                class="ObjectPage-keyInfos-0"
              />
            </div>
          </div>
        </span>
      </div>
    </header>
    <section
      class="ObjectPage-anchorBar-0"
      role="navigation"
    >
      <li
        class="ObjectPageAnchorButton-anchorButtonContainer-0"
      >
        <span
          class="ObjectPageAnchorButton-button-0"
        />
      </li>
      <li
        class="ObjectPageAnchorButton-anchorButtonContainer-0"
      >
        <span
          class="ObjectPageAnchorButton-button-0 ObjectPageAnchorButton-selected-0"
        />
      </li>
    </section>
  </header>
  <div
    class="ObjectPage-outerContentContainer-0"
  >
    <div
      class="ObjectPage-contentContainer-0"
      id="ObjectPageContent"
      style="margin-right: -12px;"
    >
      <div
        class="ObjectPage-contentScrollContainer-0"
      >
        <div />
        <div />
        <section
          class="ObjectPage-sectionsContainer-0"
        >
          <section
            id="ObjectPageSection-2"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              />
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                Test 2
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage-fillerDiv-0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ObjectPage With Subsections 1`] = `
<div
  class="ObjectPage-objectPage-0"
  data-component-name="ObjectPage"
>
  <div
    class="ObjectPageScrollBar-outerScrollbar-0"
    style="width: 12px;"
  >
    <div
      class="ObjectPageScrollBar-innerScrollbar-0"
      style="margin-left: -12px; width: 24px;"
    >
      <div
        style="width: 12px;"
      />
    </div>
  </div>
  <header
    aria-roledescription="Object page header"
    class="ObjectPage-header-0"
    role="banner"
    style="padding-right: 12px;"
  >
    <span
      class="ObjectPage-actions-0"
    >
      <ui5-button
        design="Default"
      >
        Action
      </ui5-button>
    </span>
    <header
      class="ObjectPage-titleBar-0"
    >
      <div
        class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsCenter-0 FlexBox-flexWrapNoWrap-0"
      >
        <span
          class="ObjectPage-container-0"
        >
          <div
            class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionColumn-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
          >
            <div
              class="FlexBox-flexBox-0 FlexBox-flexBoxDirectionRow-0 FlexBox-justifyContentStart-0 FlexBox-alignItemsStretch-0 FlexBox-flexWrapNoWrap-0"
            >
              <h1
                class="ObjectPage-title-0"
              >
                Fiori Object Page Title
              </h1>
              <span
                class="ObjectPage-subTitle-0"
              >
                Sub Title
              </span>
              <div
                class="ObjectPage-keyInfos-0"
              />
            </div>
          </div>
        </span>
      </div>
    </header>
  </header>
  <div
    class="ObjectPage-outerContentContainer-0"
  >
    <div
      class="ObjectPage-contentContainer-0"
      id="ObjectPageContent"
      style="margin-right: -12px;"
    >
      <div
        class="ObjectPage-contentScrollContainer-0"
      >
        <div />
        <div>
          <div
            class="ObjectPage-contentHeader-0"
            style="position: relative;"
          >
            <div
              class="ObjectPage-headerContent-0"
            >
              <span
                class="ObjectPage-headerCustomContent-0"
              >
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <ui5-link
                    design="Default"
                    href="https://www.sap.com"
                  >
                    www.myurl.com
                  </ui5-link>
                  <span
                    class="Text-text-0"
                  >
                    Address 1
                  </span>
                  <span
                    class="Text-text-0"
                  >
                    Address 2
                  </span>
                  <span
                    class="Text-text-0"
                  >
                    Address 3
                  </span>
                </div>
              </span>
            </div>
          </div>
          <section
            class="ObjectPage-anchorBar-0"
            role="navigation"
          >
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton-button-0"
                >
                  Test 1
                </span>
              </div>
            </li>
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton-button-0"
                >
                  Test 2
                </span>
              </div>
            </li>
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton-button-0"
                >
                  Test 3
                </span>
              </div>
            </li>
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <div
                class=""
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton-button-0"
                >
                  Test 4
                </span>
              </div>
              <div
                style="display: inline-block;"
              >
                <ui5-icon
                  name="slim-arrow-down"
                  style="height: 1rem; width: 1rem; cursor: pointer; margin: 0px 0.25rem 0px 0.375rem; font-size: 0.875rem;"
                />
              </div>
              <ui5-popover
                horizontal-align="Center"
                no-arrow="true"
                placement-type="Bottom"
                vertical-align="Center"
              >
                <ui5-list
                  footer-text=""
                  header-text=""
                  mode="None"
                  no-data-text=""
                  separators="All"
                >
                  <div
                    class=""
                    style="cursor: pointer;"
                  >
                    <ui5-li
                      data-key="4.1"
                      info-state="None"
                      type="Active"
                    >
                      SubSection 4.1
                    </ui5-li>
                  </div>
                  <div
                    class=""
                    style="cursor: pointer;"
                  >
                    <ui5-li
                      data-key="4.2"
                      info-state="None"
                      type="Active"
                    >
                      SubSection 4.2
                    </ui5-li>
                  </div>
                </ui5-list>
              </ui5-popover>
            </li>
            <li
              class="ObjectPageAnchorButton-anchorButtonContainer-0"
            >
              <div
                class="ObjectPageAnchorButton-selected-0"
                style="cursor: pointer;"
              >
                <span
                  class="ObjectPageAnchorButton-button-0"
                >
                  Test 5
                </span>
              </div>
              <div
                style="display: inline-block;"
              >
                <ui5-icon
                  name="slim-arrow-down"
                  style="height: 1rem; width: 1rem; cursor: pointer; margin: 0px 0.25rem 0px 0.375rem; font-size: 0.875rem;"
                />
              </div>
              <ui5-popover
                horizontal-align="Center"
                no-arrow="true"
                placement-type="Bottom"
                vertical-align="Center"
              >
                <ui5-list
                  footer-text=""
                  header-text=""
                  mode="None"
                  no-data-text=""
                  separators="All"
                >
                  <div
                    class=""
                    style="cursor: pointer;"
                  >
                    <ui5-li
                      data-key="5.1"
                      info-state="None"
                      type="Active"
                    >
                      SubSection 5.1
                    </ui5-li>
                  </div>
                  <div
                    class=""
                    style="cursor: pointer;"
                  >
                    <ui5-li
                      data-key="5.2"
                      info-state="None"
                      type="Active"
                    >
                      SubSection 5.2
                    </ui5-li>
                  </div>
                </ui5-list>
              </ui5-popover>
            </li>
            <ui5-button
              class="ObjectPage-toggleHeaderButton-0"
              design="Default"
              icon="navigation-up-arrow"
            />
          </section>
        </div>
        <section
          class="ObjectPage-sectionsContainer-0"
        >
          <section
            id="ObjectPageSection-1"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              >
                Test 1
              </div>
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                <ui5-label
                  for=""
                >
                  My Content 1
                </ui5-label>
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-2"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              >
                Test 2
              </div>
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                <div
                  style="height: 800px;"
                >
                  Test2
                </div>
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-3"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              >
                Test 3
              </div>
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                Test1
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-4"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              >
                Test 4
              </div>
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                <h1>
                  Section 4
                </h1>
                <div
                  class="ObjectPageSubSection-objectPageSubSection-0"
                  id="ObjectPageSubSection-4.1"
                  role="region"
                >
                  <div
                    class="ObjectPageSubSection-objectPageSubSectionHeaderTitle-0"
                  >
                    SubSection 4.1
                  </div>
                  <div
                    class="ObjectPageSubSection-subSectionContent-0"
                  >
                    Test 4 SubSection 1
                  </div>
                </div>
                <div
                  class="ObjectPageSubSection-objectPageSubSection-0"
                  id="ObjectPageSubSection-4.2"
                  role="region"
                >
                  <div
                    class="ObjectPageSubSection-objectPageSubSectionHeaderTitle-0"
                  >
                    SubSection 4.2
                  </div>
                  <div
                    class="ObjectPageSubSection-subSectionContent-0"
                  >
                    Test 4 SubSection 2
                  </div>
                </div>
              </div>
            </div>
          </section>
          <section
            id="ObjectPageSection-5"
            role="region"
          >
            <div
              class="ObjectPageSection-header-0"
              role="heading"
            >
              <div
                class="ObjectPageSection-title-0 ObjectPageSection-uppercase-0"
              >
                Test 5
              </div>
            </div>
            <div
              class="ObjectPageSection-sectionContent-0"
            >
              <div
                class="ObjectPageSection-sectionContentInner-0"
              >
                <div
                  class="ObjectPageSubSection-objectPageSubSection-0"
                  id="ObjectPageSubSection-5.1"
                  role="region"
                >
                  <div
                    class="ObjectPageSubSection-objectPageSubSectionHeaderTitle-0"
                  >
                    SubSection 5.1
                  </div>
                  <div
                    class="ObjectPageSubSection-subSectionContent-0"
                  >
                    Content of SubSection 5.1
                  </div>
                </div>
                <div
                  class="ObjectPageSubSection-objectPageSubSection-0"
                  id="ObjectPageSubSection-5.2"
                  role="region"
                >
                  <div
                    class="ObjectPageSubSection-objectPageSubSectionHeaderTitle-0"
                  >
                    SubSection 5.2
                  </div>
                  <div
                    class="ObjectPageSubSection-subSectionContent-0"
                  >
                    Content of SubSection 5.2
                  </div>
                </div>
              </div>
            </div>
          </section>
        </section>
        <div
          class="ObjectPage-fillerDiv-0"
        />
      </div>
    </div>
  </div>
</div>
`;
